# drillguard-os

./: .gitignore  CITATION.cff  LICENSE  README.md  RELEASE_NOTES_v0.2.1.md  RELEASE_NOTES_v0.2.2.md  pyproject.toml  requirements-lock.txt
.github/workflows/: ci.yml
artifacts/: CLAIMS_MANIFEST.json  _audit_tmp.csv  _audit_tmp.html  _audit_tmp.json  benchmark_results.html  benchmark_results.json  dashboard.html  dashboard_cards.html  demo_report.html  demo_report.json  redteam_results.json  release_manifest.json  schema_example.csv
benchmark/: metrics.py  run_benchmark.py  run_redteam.py  scenarios.py
data/: README.md
docs/: AUDIT_2026_07_23.md  AUDIT_REDTEAM_2026_07_24.md  CHANGELOG.md  DATA_DICTIONARY.md  EVIDENCE_SYNC.md  INDUSTRIX_APPLICATION_SYNC.md  LIMITATIONS.md  PHYSICS_AND_ASSUMPTIONS.md  PILOT_PLAN.md  REFERENCES.md  RELEASE_CHECKLIST.md  THREAT_MODEL.md  VALIDATION_PROTOCOL.md
drillguard/: __init__.py  api.py  baseline.py  cli.py  dashboard.py  detector.py  events.py  explain.py  features.py  ingestion.py  persistence.py  quality.py  regimes.py  report.py  schema.py  synthetic.py  timebase.py
tests/: test_api.py  test_artifact_claims_consistency.py  test_baseline_causality.py  test_benchmark.py  test_detector.py  test_events.py  test_features.py  test_future_leakage.py  test_ingestion.py  test_persistence.py  test_quality.py  test_regime_reset.py  test_regimes.py  test_report.py  test_schema.py  test_security.py  test_timebase.py  test_units.py
