[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "drillguard-os"
version = "0.2.2"
description = "Local advisory drilling complication screening demonstrator (synthetic MVP)"
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
requires-python = ">=3.10"
authors = [{ name = "DrillGuard OS contributors" }]
keywords = ["drilling", "advisory", "hydraulics", "screening", "INDUSTRIX"]
dependencies = [
  "numpy>=1.24,<3",
  "pandas>=2.0,<3",
  "pydantic>=2.0,<3",
]

[project.optional-dependencies]
api = ["fastapi>=0.110,<1", "uvicorn>=0.27,<1", "python-multipart>=0.0.9"]
dashboard = ["matplotlib>=3.8,<4"]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.4",
  "fastapi>=0.110,<1",
  "uvicorn>=0.27,<1",
  "python-multipart>=0.0.9",
  "matplotlib>=3.8,<4",
  "httpx>=0.27",
]

[project.scripts]
drillguard = "drillguard.cli:main"

[project.urls]
Homepage = "https://github.com/KonkovDV/drillguard-os"
Documentation = "https://github.com/KonkovDV/drillguard-os#readme"

[tool.setuptools.packages.find]
include = ["drillguard*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
# E501: long RU/HTML strings and signatures are intentional in this package.
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"drillguard/api.py" = ["B008"]
